# python-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
